--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             -webkit-font-smoothing: antialiased;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
+            width: 100%;
+        }
+        * {
+            box-sizing: border-box;
         }
         .font-sans {
             font-family: 'Inter', sans-serif;
@@ -69,11 +74,16 @@
         /* Mobile adjustment */
         @media (max-width: 640px) {
             .paper-sheet {
-                padding: 3rem 1.25rem !important;
+                padding: 2rem 1rem !important;
             }
             .dropcap::first-letter {
                 font-size: 3.5rem;
             }
+        }
+        /* Prevent horizontal overflow */
+        html, body {
+            max-width: 100%;
+            overflow-x: hidden;
         }
         /* Custom scrollbar matching paper theme */
         ::-webkit-scrollbar { width: 8px; }
